testdata/parser/negative/12.txt
Parse error at 12.pdl:6:3: Illegal channel delcaration
		channel x -> y;
		^
